<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PromoProcessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutProcess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageViewTelecom"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@raw/globe_tm_logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buy_load_for"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView_NumberFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint="@string/customer_number"
                android:textStyle="bold"
                android:textColor="#4285f4"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView_PromoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint="Promo Code"
                android:textStyle="bold"
                android:textColor="#F65314"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView_Promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:hint="@string/name_promo"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint="Price"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_btn"
                    android:text="@string/close"
                    android:textAllCaps="false"
                    android:textColor="@color/white_smoke"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F65314"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_btn"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@color/white_smoke"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="#4285f4"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>