<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DitoActivity">

    <LinearLayout
        android:id="@+id/layoutProcess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/backButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="start|center"
                android:background="@drawable/ic_back"
                app:backgroundTint="#F65314" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@raw/dito"
                android:contentDescription="@string/logo" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buy_load_for"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="28sp" />
        <TextView
            android:id="@+id/textView_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:hint="@string/customer_number"
            android:textStyle="bold"
            android:textColor="#4285f4"
            android:textSize="25sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/content_promo_load" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/content_regular_load" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFinalizing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="#FFFFF2"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@raw/dito"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buy_load_for"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView_NumberFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint="@string/customer_number"
                android:textStyle="bold"
                android:textColor="#4285f4"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView_Promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint="@string/name_promo"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_btn"
                    android:text="@string/close"
                    android:textAllCaps="false"
                    android:textColor="@color/white_smoke"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F65314"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_btn"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@color/white_smoke"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="#4285f4"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>